[GTK] X11 build fixes https://bugs.webkit.org/show_bug.cgi?id=223577

Patch by Philippe Normand <pnormand@igalia.com> on 2021-03-23
Reviewed by Adrian Perez de Castro.

Source/WebCore:

X11 headers define a bunch of macros with common terms, interfering with WebCore and WTF
enum values. As a workaround, we explicitly undef them.

* platform/graphics/GLContext.h:
* platform/graphics/GraphicsContext.h:

Source/WebKit:

* Shared/CoordinatedGraphics/threadedcompositor/ThreadedCompositor.cpp:
(WebKit::ThreadedCompositor::createGLContext): GLNativeWindowType might be a long unsigned
int, which can't be reinterpret casted to uin64_t on 32-bit platforms.
* WebProcess/WebPage/CoordinatedGraphics/DrawingAreaCoordinatedGraphics.cpp: Use
WebCore::Region to prevent clashes with X11's Region.
(WebKit::DrawingAreaCoordinatedGraphics::scroll):
(WebKit::DrawingAreaCoordinatedGraphics::enterAcceleratedCompositingMode):
(WebKit::DrawingAreaCoordinatedGraphics::display):

Canonical link: https://commits.webkit.org/235651@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274869 268f45cc-cd09-0410-ab3c-d52691b4dbfc